# ai_hydroforecast

./: .gitignore  CITATION.cff  LICENSE  README.md  RUN_ME.ipynb  main.py  multi_run.py  nse_gr4j_lstm_Hashemi_2022.txt  nse_gr4j_otis_uge.txt  pyproject.toml  requirements.txt
data/: basins_2.txt
datatools/: base_data.py  climatic_from_data.py  features_setting.py  manage_input_data.py  read_data.py
post_process_v2/: analysis_of_forcing_forecasts.ipynb  make_plots_paper_US_FR.ipynb  postp_outputs_paper_US_FR.ipynb  pp_utils.py  prepare_data_paper.ipynb  run_posp.py
utils/: args_getter.py  base_model.py  hindcast_utils.py  job_multi.py  launch_climatology.py  logger.py  main_config.json  param_space.json  prepare_config.py  run_model.py  utils.py
